k8s/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-app-prod
  labels:
    name: banking-app-prod
    environment: production
