k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-app
  labels:
    name: banking-app
