k8s/deployment-no-healthchecks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-app
  namespace: banking-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banking-app
  template:
    metadata:
      labels:
        app: banking-app
    spec:
      containers:
      - name: banking-app
        image: tdksoft341/tdk-banking-app:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["/bin/sh"]
        args: ["-c", "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn bankingsystem.wsgi:application --bind 0.0.0.0:8000"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
