k8s/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-app
  namespace: banking-app-prod
  labels:
    app: banking-app
    environment: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: banking-app
  template:
    metadata:
      labels:
        app: banking-app
        environment: production
    spec:
      containers:
      - name: banking-app
        image: tdksoft341/tdk-banking-app:v1.0.0 
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        # Health checks désactivés pour l'instant
        command: ["/bin/sh"]
        args: ["-c", "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn bankingsystem.wsgi:application --bind 0.0.0.0:8000"]
